log
Sun 25 Sep 2022 01:28:49 AM UTC: 
 tests:  1|8
total_score: 0/70
5c11219
Sun 25 Sep 2022 03:35:32 AM UTC: 
 treemap.c | 7 +++++--
 1 file changed, 5 insertions(+), 2 deletions(-)
 tests:  4|7
total_score: 5/70
02e83cb
Sun 25 Sep 2022 03:50:30 AM UTC: 
 treemap.c | 14 ++++++++++++--
 1 file changed, 12 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   50 |   if(!tree) return NULL;
      |                    ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:53:31: error: ‘TreeNode’ has no member named ‘key’
   53 |   if(is_equal(tree, tree->root->key, key) == 1) {
      |                               ^~
treemap.c:55:25: error: ‘TreeNode’ has no member named ‘value’
   55 |     return tree->current->value;
      |                         ^~
treemap.c:55:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   55 |     return tree->current->value;
      |            ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:56:13: error: implicit declaration of function ‘lower_than_int’ [-Werror=implicit-function-declaration]
   56 |   } else if(lower_than_int(tree->root->key, key) == 1) {
      |             ^~~~~~~~~~~~~~
treemap.c:56:38: error: ‘TreeNode’ has no member named ‘key’
   56 |   } else if(lower_than_int(tree->root->key, key) == 1) {
      |                                      ^~
cc1: all warnings being treated as errors
Compilation failed
8670e4f
Sun 25 Sep 2022 03:50:47 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   50 |   if(!tree) return NULL;
      |                    ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:53:31: error: ‘TreeNode’ has no member named ‘key’
   53 |   if(is_equal(tree, tree->root->key, key) == 1) {
      |                               ^~
treemap.c:55:25: error: ‘TreeNode’ has no member named ‘value’
   55 |     return tree->current->value;
      |                         ^~
treemap.c:55:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   55 |     return tree->current->value;
      |            ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:56:13: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   56 |   } else if(lower_than(tree->root->key, key) == 1) {
      |             ^~~~~~~~~~
treemap.c:56:34: error: ‘TreeNode’ has no member named ‘key’
   56 |   } else if(lower_than(tree->root->key, key) == 1) {
      |                                  ^~
cc1: all warnings being treated as errors
Compilation failed
a859914
Sun 25 Sep 2022 03:51:02 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   50 |   if(!tree) return NULL;
      |                    ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:53:31: error: ‘TreeNode’ has no member named ‘key’
   53 |   if(is_equal(tree, tree->root->key, key) == 1) {
      |                               ^~
treemap.c:55:22: error: ‘TreeNode’ has no member named ‘value’
   55 |     return tree->root->value;
      |                      ^~
treemap.c:55:12: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   55 |     return tree->root->value;
      |            ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:56:13: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   56 |   } else if(lower_than(tree->root->key, key) == 1) {
      |             ^~~~~~~~~~
treemap.c:56:34: error: ‘TreeNode’ has no member named ‘key’
   56 |   } else if(lower_than(tree->root->key, key) == 1) {
      |                                  ^~
cc1: all warnings being treated as errors
Compilation failed
4487d8c
Sun 25 Sep 2022 03:51:33 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   50 |   if(!tree) return NULL;
      |                    ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:53:31: error: ‘TreeNode’ has no member named ‘key’
   53 |   if(is_equal(tree, tree->root->key, key) == 1) {
      |                               ^~
treemap.c:55:16: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   55 |     return tree->current;
      |            ~~~~^~~~~~~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:56:13: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   56 |   } else if(lower_than(tree->root->key, key) == 1) {
      |             ^~~~~~~~~~
treemap.c:56:34: error: ‘TreeNode’ has no member named ‘key’
   56 |   } else if(lower_than(tree->root->key, key) == 1) {
      |                                  ^~
cc1: all warnings being treated as errors
Compilation failed
d6cd5c4
Sun 25 Sep 2022 03:51:45 AM UTC: 
 treemap.c | 1 -
 1 file changed, 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   50 |   if(!tree) return NULL;
      |                    ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:53:31: error: ‘TreeNode’ has no member named ‘key’
   53 |   if(is_equal(tree, tree->root->key, key) == 1) {
      |                               ^~
treemap.c:55:13: error: implicit declaration of function ‘lower_than’ [-Werror=implicit-function-declaration]
   55 |   } else if(lower_than(tree->root->key, key) == 1) {
      |             ^~~~~~~~~~
treemap.c:55:34: error: ‘TreeNode’ has no member named ‘key’
   55 |   } else if(lower_than(tree->root->key, key) == 1) {
      |                                  ^~
cc1: all warnings being treated as errors
Compilation failed
d10fd89
Sun 25 Sep 2022 03:51:55 AM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   50 |   if(!tree) return NULL;
      |                    ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:53:31: error: ‘TreeNode’ has no member named ‘key’
   53 |   if(is_equal(tree, tree->root->key, key) == 1) {
      |                               ^~
treemap.c:55:13: error: implicit declaration of function ‘lower_than_int’ [-Werror=implicit-function-declaration]
   55 |   } else if(lower_than_int(tree->root->key, key) == 1) {
      |             ^~~~~~~~~~~~~~
treemap.c:55:38: error: ‘TreeNode’ has no member named ‘key’
   55 |   } else if(lower_than_int(tree->root->key, key) == 1) {
      |                                      ^~
cc1: all warnings being treated as errors
Compilation failed
34f0675
Sun 25 Sep 2022 03:53:07 AM UTC: 
 treemap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:50:20: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   50 |   if(!tree) return NULL;
      |                    ^~~~
treemap.c:49:6: note: declared here
   49 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
treemap.c:55:13: error: implicit declaration of function ‘lower_than_int’ [-Werror=implicit-function-declaration]
   55 |   } else if(lower_than_int(tree->root->pair->key, key) == 1) {
      |             ^~~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8415b09
